@@ -42,8 +42,9 @@ Credits
 =======
 
 Cantata contains codei/icons from:
-    Amarok         - amarok.kde.org
-    Clementine     - www.clementine-player.org
-    libmaia        - https://github.com/wiedi/libmaia
-    libebur128     - https://github.com/jiixyj/libebur12
-    wikipedia icon - Social Media Mini by Paul Robert Lloyd License: Commons licence: Attribution-Share Alike 2.0 UK: England & Wales
+    Amarok                   - amarok.kde.org
+    Clementine               - www.clementine-player.org
+    libmaia                  - https://github.com/wiedi/libmaia
+    libebur128               - https://github.com/jiixyj/libebur12
+    wikipedia icon           - Social Media Mini by Paul Robert Lloyd License: Commons licence: Attribution-Share Alike 2.0 UK: England & Wales
+    repeat and shuffle icons - DefaultIcon ver 0.11 by Interactivemania
